--- a/src/components/Maps/Map.css
+++ b/src/components/Maps/Map.css
@@ -1,6 +1,13 @@
+.bienvenida {
+    color: black;
+    font-size: 2.25em;
+    margin: 4px;
+    text-align: center;
+}
+
 .map-container {
-    margin: 100px auto;
-  width: 85%;
+    margin: 20px auto;
+  width: 80%;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
   position: relative;
   border-radius: 10px;
@@ -8,3 +15,29 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
+.info-window {
+    background-color: white;
+    padding: 0rem 0 0rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+    .info-btn {
+    width: 60%;
+    height: 30px;
+    margin-top: 4px;
+    border-radius: 2px;
+    background: #fff;
+    color: #242424;
+    font-size: 1em;
+    align-self: center;
+    }
+    .info-label {
+    display: inline-block;
+    font-size: 1.25em;
+    margin-bottom: 0px;
+    color: black;
+    }
+
