--- a/src/components/Maps/Map.css
+++ b/src/components/Maps/Map.css
@@ -6,7 +6,7 @@
 }
 
 .map-container {
-    margin: 20px auto;
+  margin: 20px auto;
   width: 80%;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
   position: relative;
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
     }
-    .info-btn {
+    .infow-btn {
     width: 60%;
     height: 30px;
     margin-top: 4px;
@@ -34,10 +34,36 @@
     font-size: 1em;
     align-self: center;
     }
-    .info-label {
+    .infow-label {
     display: inline-block;
     font-size: 1.25em;
     margin-bottom: 0px;
     color: black;
     }
 
+.info-container {
+  margin: 20px auto;
+  background-color: white;
+  padding: 0rem 0 0rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: #242424;
+  border-radius: 20px;
+  }
+  .info-btn {
+    width: 60%;
+    height: 30px;
+    margin-top: 4px;
+    border-radius: 2px;
+    background: #fff;
+    color: #242424;
+    font-size: 1em;
+    align-self: center;
+    }
+  .info-label {
+    font-size: 1.25em;
+    margin-bottom: 0px;
+    color: black;
+    }
